# korganizer

./: .clang-tidy  .clangd  .codespellrc  .craft.ini  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .psrc  A.patch  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  HACKING  LICENSE  MAINTAINERS  Mainpage.dox  Makefile.am  Messages.sh  NEWS  README  README.md  README.md.license  REUSE.toml  TODO  aboutdata.cpp  aboutdata.h  aboutdlg.cpp  aboutdlg.h  accountscalendarwidget.ui  actionmanager.cpp  actionmanager.h  agendaview.cpp  agendaview.h  akonadicalendar.cpp  akonadicalendar.h  akonadicalendar_p.h  (+521 more)
autotests/: CMakeLists.txt  koeventpopupmenutest.cpp  koeventpopupmenutest.h  noteeditdialogtest.cpp  noteeditdialogtest.h  testkodaymatrix.cpp  testkodaymatrix.h
holidays/: Makefile.am  holiday_at  holiday_australia  holiday_austria  holiday_bavarian  holiday_belgium  holiday_ca  holiday_cz  holiday_czechia  holiday_denmark  holiday_fi  holiday_french  holiday_gb  holiday_german  holiday_german.orig  holiday_iceland  holiday_il  holiday_it  holiday_mx  holiday_nl  holiday_nz  holiday_poland  holiday_portugal  holiday_ro  holiday_se  holiday_slovenia  holiday_spain  holiday_th
incidenceeditor/: CMakeLists.txt  customlistviewitem.h  freebusyurldialog.cpp  freebusyurldialog.h  incidenceeditor_export.h  koattendeeeditor.cpp  koattendeeeditor.h  koeditoralarms.cpp  koeditoralarms.h  koeditoralarms_base.ui  koeditorattachments.cpp  koeditorattachments.h  koeditorconfig.cpp  koeditorconfig.h  koeditordetails.cpp  koeditordetails.h  koeditorfreebusy.cpp  koeditorfreebusy.h  koeditorgeneral.cpp  koeditorgeneral.h  koeditorgeneralevent.cpp  koeditorgeneralevent.h  koeditorgeneraljournal.cpp  koeditorgeneraljournal.h  koeditorgeneraltodo.cpp  koeditorgeneraltodo.h  koeditorrecurrence.cpp  koeditorrecurrence.h  koeventeditor.cpp  koeventeditor.h  kogroupwareintegration.cpp  kogroupwareintegration.h  koincidenceeditor.cpp  koincidenceeditor.h  kojournaleditor.cpp  kojournaleditor.h  kotodoeditor.cpp  kotodoeditor.h  main.cpp  template_management_dialog_base.ui  (+1 more)
incidenceeditor/tests/: CMakeLists.txt  incidenceeditorapp.cpp
interfaces/: CMakeLists.txt  Makefile.am
interfaces/calendar/: CMakeLists.txt  Makefile.am  calendardecoration.cpp  calendardecoration.desktop  calendardecoration.h  calendarplugin.desktop  calendartextdecoration.desktop  calendarwidgetdecoration.desktop  oldcalendardecoration.desktop  oldcalendardecoration.h  picturedecoration.h  plugin.h  textdecoration.h  widgetdecoration.h
interfaces/korganizer/: CMakeLists.txt  Makefile.am  akonadicalendaradaptor.h  baseview.cpp  baseview.h  calendarviewbase.h  corehelper.h  incidencechangerbase.cpp  mainwindow.h  (+6 more)
kcmconfigs/: CMakeLists.txt  korganizer_configcolorsandfonts.desktop  korganizer_configdesignerfields.desktop  korganizer_configfreebusy.desktop  korganizer_configgroupscheduling.desktop  korganizer_configmain.desktop  korganizer_configplugins.desktop  korganizer_configtime.desktop  korganizer_configviews.desktop
knewstuff/: Makefile.am  downloaddialog.cpp  downloaddialog.h  engine.cpp  engine.h  entry.cpp  entry.h  ghns.cpp  ghns.h  khotnewstuff.cpp  khotnewstuffrc  knewstuff.cpp  knewstuff.h  knewstuffgeneric.cpp  knewstuffgeneric.h  provider.cpp  provider.h  providerdialog.cpp  providerdialog.h  testnewstuff.cpp  testnewstuff.h  types  uploaddialog.cpp  uploaddialog.h
korgac/: CMakeLists.txt  Mainpage.dox  Makefile.am  Messages.sh  alarmclientiface.h  alarmdialog.cpp  alarmdialog.h  alarmdockwindow.cpp  alarmdockwindow.h  autostart-org.kde.korgac.desktop  koalarmclient.cpp  koalarmclient.h  koeventviewer.cpp  koeventviewer.h  korgac.desktop  korgacagent.cpp  korgacagent.desktop  korgacagent.h  korgacmain.cpp  mailclient.cpp  mailclient.h  org.kde.korgac.desktop  org.kde.korgac.service.in  org.kde.korganizer.KOrgac.xml  simplealarmdaemon.cpp  simplealarmdaemon.h  simplealarmdaemonmain.cpp  testalarmdlg.cpp
pixmaps/: 1downarrow.xpm  1leftarrow.xpm  1rightarrow.xpm  1uparrow.xpm  2downarrow.xpm  2leftarrow.xpm  2rightarrow.xpm  2uparrow.xpm  3downarrow.xpm  3leftarrow.xpm  3rightarrow.xpm  3uparrow.xpm  5dayicon.xpm  CMakeLists.txt  Makefile.am  agenda.xpm  alarmd-disabled.xpm  alarmd.xpm  bell.xpm  checkedbox-mask.xpm  checkedbox.xpm  checkedclipboard.xpm  checkmark.xpm  dayicon.xpm  dayview.xpm  delete.xpm  emptybox-mask.xpm  emptybox.xpm  inverse_recur.xpm  kdayplan.xpm  korganizer.xpm  listicon.xpm  mailappt.xpm  mini-korganizer.xpm  monthicon.xpm  newevent.xpm  newrecurevent.xpm  nomailappt.xpm  playsound.xpm  readonlyevent.xpm  (+8 more)
plugins/: CMakeLists.txt  Makefile.am  Messages.sh
printing/: CMakeLists.txt  Makefile.am  calprintdayconfig_base.ui  calprintdefaultplugins.cpp  calprintdefaultplugins.h  calprinter.cpp  calprinter.h  calprinthelper.cpp  calprinthelper.h  calprintincidenceconfig_base.ui  calprintmonthconfig_base.ui  calprintpluginbase.cpp  calprintpluginbase.h  calprinttodoconfig_base.ui  calprintweekconfig_base.ui  cellitem.cpp  cellitem.h
sounds/: CMakeLists.txt  Makefile.am
src/: CMakeLists.txt  Messages.sh  Todo-info.text  aboutdata.cpp  aboutdata.h  actionmanager.cpp  actionmanager.h  akonadicollectionview.cpp  akonadicollectionview.h  calendarview.cpp  calendarview.h  collectiongeneralpage.cpp  collectiongeneralpage.h  collectionsortfilterproxymodel.cpp  collectionsortfilterproxymodel.h  datechecker.cpp  datechecker.h  datenavigator.cpp  datenavigator.h  datenavigatorcontainer.cpp  datenavigatorcontainer.h  dbuscalendar.desktop  kcmdesignerfields.cpp  kcmdesignerfields.h  koapp.cpp  koapp.h  kocheckableproxymodel.cpp  kocheckableproxymodel.h  kocore.cpp  kocore.h  kocorehelper.cpp  kocorehelper.h  kodaymatrix.cpp  kodaymatrix.h  kodialogmanager.cpp  kodialogmanager.h  koeventpopupmenu.cpp  koeventpopupmenu.h  koeventview.cpp  koeventview.h  (+34 more)
tests/: CMakeLists.txt  koeventpopupmenutest.cpp  koeventpopupmenutest.h  korgplugins.cpp  noteeditdialogtest.cpp  noteeditdialogtest.h  testkcmdesignerfields.cpp  testkodaymatrix.cpp  timezone.cpp
(+755 files in other folders)
