
holidaysdir = $(kde_datadir)/korganizer

holidays_DATA = holiday_dutch holiday_japan holiday_finnish \
		holiday_norway holiday_australia holiday_french \
		holiday_quebec holiday_austria holiday_frswiss \
		holiday_spain holiday_bavarian holiday_german \
		holiday_swedish holiday_belgium \
		holiday_uk holiday_canada holiday_hungary holiday_us \
		holiday_denmark holiday_italy holiday_portugal \
		holiday_thailand holiday_czechia holiday_iceland \
		holiday_poland holiday_catalan
