
holidaysdir = $(kde_datadir)/korganizer

holidays_DATA = holiday_at holiday_au holiday_bavarian holiday_be holiday_ca holiday_catalan holiday_ch holiday_cz holiday_de holiday_dk holiday_es holiday_fi holiday_fr holiday_frswiss holiday_gb holiday_hu holiday_is holiday_it holiday_ja holiday_nl holiday_no holiday_pl holiday_pt holiday_quebec holiday_ro holiday_se holiday_si holiday_th holiday_us

